# programmieruebung_Auf_2-5

./: README.md  ekgdata.py  main.py  person.py  powercurve.py  pyproject.toml  read_data.py  read_pandas.py
