[project]
name = "programmieruebung_Auf_2-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mak2494", email = "km2430@mci4me.at"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
